--- a/register/templates/register/main.html
+++ b/register/templates/register/main.html
@@ -12,9 +12,9 @@
 
 	<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"> -->
 
-	<link href="{% static 'register/css/home.css' %}">
-	<link href="{% static 'register/css/myStyle.css' %}">
-	<link href="{% static 'register/css/main.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'register/css/home.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'register/css/myStyle.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'register/css/main.css' %}">
 
 	<script src="https://kit.fontawesome.com/562a256c19.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
