--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -73,7 +73,7 @@
 	<h4>Thanh Toán</h4>
 	<div class="row" style="margin-bottom: 40px;">
 		<div class="col-sm-12 col-md-6 col-lg-6">
-			<p>MOMO: 0908482106 - Nguyen Huynh Anh</p>
+			<p>MOMO: 0703482103 - Huynh Thi My Duyen</p>
 			<p>Nội Dung: Tên đội - Nộp Lệ Phí UCPC 2021</p>
 			<p>Lệ Phí: 90.000 đồng/Đội</p>
 		</div>
