--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -78,7 +78,7 @@
 			<p>Lệ Phí: 90.000 đồng/Đội</p>
 		</div>
 		<div class="col-sm-12 col-md-6 col-lg-6">
-			<img src="{% static 'register/images/MOMO/momo.png' %}" style="width:150px; margin-top: 10px;">
+			<img src="{% static 'register/images/MOMO/MOMO.jpg' %}" style="width:150px; margin-top: 10px;">
 		</div>
 		
 	</div>
