Add dropdown box School

--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -50,7 +50,7 @@
 			<td>{{ item.member1 }}</td>
 			<td>{{ item.cmnd1 }}</td>
 			<td>{{ item.phone1 }}</td>
-			<td rowspan="3" style="text-align: center;">{{ item.school }}</td>
+			<!-- <td rowspan="3" style="text-align: center;">{{ item.school1 }}</td> -->
 		</tr>
 		<tr>
 			<td>{{ item.member2 }}</td>
