--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -298,12 +298,10 @@
 
 
 <!-- Giới thiệu nhà tài trợ -->
-<div id="sponsor">
-    <div class="row">
-        <div class="col-6 col-md-4"></div>
-        <div class="col-6 col-md-4"></div>
-        <div class="col-6 col-md-4"></div>
-    </div>
+<div id="sponsor" class = "container">
+    <div class="col-6 col-md-4"></div>
+    <div class="col-6 col-md-4"></div>
+    <div class="col-6 col-md-4"></div>
 </div>
 
 <!-- Giới thiệu nhà tài trợ -->
