--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -29,7 +29,10 @@
 			<small>{{ tf.cmnd1.errors }}</small>
 			{{ tf.phone1.label }}<br>
 			{{ tf.phone1 }}
-			<small>{{ tf.phone1.errors }}</small><br>
+			<small>{{ tf.phone1.errors }}</small>
+			{{ tf.school1.label }}<br>
+			{{ tf.school1 }}
+			<small>{{ tf.school1.errors }}</small><br>
 
 			{{ tf.member2.label }}<br>
 			{{ tf.member2 }}
@@ -39,7 +42,10 @@
 			<small>{{ tf.cmnd2.errors }}</small>
 			{{ tf.phone2.label }}<br>
 			{{ tf.phone2 }}
-			<small>{{ tf.phone2.errors }}</small><br>
+			<small>{{ tf.phone2.errors }}</small>
+			{{ tf.school2.label }}<br>
+			{{ tf.school2 }}
+			<small>{{ tf.school2.errors }}</small><br>
 
 			{{ tf.member3.label }}<br>
 			{{ tf.member3 }}
@@ -49,15 +55,15 @@
 			<small>{{ tf.cmnd3.errors }}</small>
 			{{ tf.phone3.label }}<br>
 			{{ tf.phone3 }}
-			<small>{{ tf.phone3.errors }}</small><br>
+			<small>{{ tf.phone3.errors }}</small>
+			{{ tf.school3.label }}<br>
+			{{ tf.school3 }}
+			<small>{{ tf.school3.errors }}</small><br>
 
 			{{ tf.email.label }}<br>
 			{{ tf.email }}
 			<small>{{ tf.email.errors }}</small>
 			<p style="margin-top: 4px;">ℹ️ Email đăng ký được Ban Tổ Chức dùng để liên lạc với đội thi.</p>
-			{{ tf.school.label }}<br>
-			{{ tf.school }}
-			<small>{{ tf.school.errors }}</small>
 			{{ tf.password.label }}<br>
 			{{ tf.password }}
 			<small>{{ tf.password.errors }}</small>
