Change profile with school

--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -50,17 +50,19 @@
 			<td>{{ item.member1 }}</td>
 			<td>{{ item.cmnd1 }}</td>
 			<td>{{ item.phone1 }}</td>
-			<!-- <td rowspan="3" style="text-align: center;">{{ item.school1 }}</td> -->
+			<td>{{ item.school1 }}</td>
 		</tr>
 		<tr>
 			<td>{{ item.member2 }}</td>
 			<td>{{ item.cmnd2 }}</td>
 			<td>{{ item.phone2 }}</td>
+			<td>{{ item.school2 }}</td>
 		</tr>
 		<tr>
 			<td>{{ item.member3 }}</td>
 			<td>{{ item.cmnd3 }}</td>
 			<td>{{ item.phone3 }}</td>
+			<td>{{ item.school3 }}</td>
 		</tr>
 		{% endfor %}
 	</tbody>
