--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -32,6 +32,19 @@
 			<small>{{ tf.phone1.errors }}</small>
 			{{ tf.school1.label }}<br>
 			{{ tf.school1 }}
+			<datalist id="schools">
+				<option>Trường Đại học Công nghệ Thông tin - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Bách khoa - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Khoa học Tự nhiên - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Quốc Tế - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Khoa học Xã hội và Nhân văn - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Sư phạm Kỹ thuật Thành phố Hồ Chí Minh</option>
+				<option>Học viện Công nghệ Bưu Chính Viễn thông</option>
+				<option>Trường Đại học Sư Phạm Thành phố Hồ Chí Minh</option>
+				<option>Trường Đại học Công nghiệp Thành phố Hồ Chí Minh</option>
+				<option>Trường Đại học Thủ Dầu Một</option>
+				<option>Trường Trung học phổ thông Gia Định</option>
+			</datalist>	
 			<small>{{ tf.school1.errors }}</small><br>
 
 			{{ tf.member2.label }}<br>
@@ -45,6 +58,19 @@
 			<small>{{ tf.phone2.errors }}</small>
 			{{ tf.school2.label }}<br>
 			{{ tf.school2 }}
+			<datalist id="schools">
+				<option>Trường Đại học Công nghệ Thông tin - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Bách khoa - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Khoa học Tự nhiên - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Quốc Tế - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Khoa học Xã hội và Nhân văn - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Sư phạm Kỹ thuật Thành phố Hồ Chí Minh</option>
+				<option>Học viện Công nghệ Bưu Chính Viễn thông</option>
+				<option>Trường Đại học Sư Phạm Thành phố Hồ Chí Minh</option>
+				<option>Trường Đại học Công nghiệp Thành phố Hồ Chí Minh</option>
+				<option>Trường Đại học Thủ Dầu Một</option>
+				<option>Trường Trung học phổ thông Gia Định</option>
+			</datalist>	
 			<small>{{ tf.school2.errors }}</small><br>
 
 			{{ tf.member3.label }}<br>
@@ -58,6 +84,19 @@
 			<small>{{ tf.phone3.errors }}</small>
 			{{ tf.school3.label }}<br>
 			{{ tf.school3 }}
+			<datalist id="schools">
+				<option>Trường Đại học Công nghệ Thông tin - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Bách khoa - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Khoa học Tự nhiên - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Quốc Tế - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Khoa học Xã hội và Nhân văn - Đại học Quốc gia TP.HCM</option>
+				<option>Trường Đại học Sư phạm Kỹ thuật Thành phố Hồ Chí Minh</option>
+				<option>Học viện Công nghệ Bưu Chính Viễn thông</option>
+				<option>Trường Đại học Sư Phạm Thành phố Hồ Chí Minh</option>
+				<option>Trường Đại học Công nghiệp Thành phố Hồ Chí Minh</option>
+				<option>Trường Đại học Thủ Dầu Một</option>
+				<option>Trường Trung học phổ thông Gia Định</option>
+			</datalist>	
 			<small>{{ tf.school3.errors }}</small><br>
 
 			{{ tf.email.label }}<br>
