--- a/register/static/register/css/home.css
+++ b/register/static/register/css/home.css
@@ -423,6 +423,47 @@ text-decoration: none;
 
 
 
+/* sponsor */
+#sponsor .container {
+  border-top: 1px rgba(255, 255, 255, 0.2) solid;
+  margin-bottom: 50px;
+}
+
+#sponsor h5
+{
+  font-size: 25px;
+  font-weight: bolder;
+  color:white;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+#sponsor .unit_logo .row    
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#sponsor .unit_logo .row .unit {
+  width: 150px;
+}
+
+#sponsor .unit_logo .unit .diamond_sponsor
+{
+  width: 100%;
+}
+
+#sponsor .unit_logo .unit .gold_sponsor
+{
+  width:80%;
+}
+
+#sponsor .unit_logo .unit .silver_sponsor
+{
+  width: 60%;
+}
 
 /* footer */
 #footer
