--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -65,6 +65,9 @@
                     <a class="nav-link" href="#reward">Lịch Trình</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#rules">Nội Quy</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#footer">Liên Hệ</a>
                 </li>
             </ul>
@@ -295,17 +298,42 @@
 </div>
 <!-- Lịch trình -->
 
-
+<!-- Nội quy -->
+<div id="rules">
+    <div class="container">
+        <h1 class="head" style="margin-left: 20px; margin-bottom: 30px;">Nội Quy</h1>
+    </div>
+</div>
+<!-- Nội quy -->
 
 <!-- Giới thiệu nhà tài trợ -->
 <div id="sponsor" class = "container">
-    <div class="col-6 col-md-4"></div>
-    <div class="col-6 col-md-4"></div>
-    <div class="col-6 col-md-4"></div>
+    <div class="col-6 col-md-4">
+        <h5>ĐƠN VỊ TÀI TRỢ</h5>
+        <div class="unit_logo">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                    <div class="unit">
+                        <img class="diamond_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                    <div class="unit">
+                        <img class="gold_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                    <div class="unit">
+                        <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
 <!-- Giới thiệu nhà tài trợ -->
 
+<!-- footer -->
 <footer>
     <div id="footer" class="container-fluid">
         <div class="container">
@@ -364,7 +392,7 @@
                 </div>
             </div>
         </div>
-
     </div>
 </footer>
+<!-- footer -->
 {% endblock main %}
