--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -308,7 +308,7 @@
 
 <!-- Giới thiệu nhà tài trợ -->
 <div id="sponsor" class = "container">
-    <div class="col-6 col-md-4">
+    <!-- <div class="col-6 col-md-4"> -->
         <h5>ĐƠN VỊ TÀI TRỢ</h5>
         <div class="unit_logo">
             <div class="row">
@@ -327,9 +327,14 @@
                         <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                    <div class="unit">
+                        <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 </div>
 <!-- Giới thiệu nhà tài trợ -->
 
