--- a/register/templates/register/main.html
+++ b/register/templates/register/main.html
@@ -47,7 +47,9 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		crossorigin="anonymous"></script>
 
-	<!-- <script src="{% static 'register/javascript/registration.js' %}"></script> -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/validator/13.7.0/validator.min.js"></script>
+
+	<script src="{% static 'register/javascript/registration.js' %}"></script>
 </body>
 
 </html>
