--- a/register/templates/login/login.html
+++ b/register/templates/login/login.html
@@ -14,7 +14,8 @@
 
 <div class="form-group">
 	<div class="container">
-		<form action="{% url 'register:login' %}" method="post">
+		<!-- <form action="{% url 'register:login' %}" method="POST"> -->
+		<form method="POST">
 			{% csrf_token %}
 			{{ lf.as_p }}
 			<button type="submit" class="btn btn-primary" style = "margin-top: 15px;">Đăng nhập</button>
