--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -186,7 +186,7 @@
             tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
             <a style ="color:#68da23;" target="_blank" href="https://drive.google.com/file/d/18HSf-HGNfVJ7n-1VgzJE8dK432zxVYEm/view?fbclid=IwAR0MPHt7q4ICpRiT139EYRU_Grxo12-XEmBh1YGP9Bvv-M5oeLNy9QL5H3c">tại đây</a>.</p> -->
             <p>
-                UCPC - UIT COLLEGIATE PROGRAMMING CONTEST là cuộc thi lập trình thuật toán danh giá nhất của UIT, được tổ chức dựa trên format của cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC. Với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường Đại học Công nghệ Thông tin nói riêng và sinh viên, học sinh THPT toàn quốc có đam mê về lập trình thuật toán nói chung. UCPC hứa hẹn sẽ là cơ hội tuyệt vời để các bạn tiếp cận,nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
+                UCPC - UIT COLLEGIATE PROGRAMMING CONTEST là cuộc thi lập trình thuật toán danh giá nhất của UIT, được tổ chức dựa trên format của cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC. Với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường Đại học Công nghệ Thông tin nói riêng và sinh viên các trường đại học, học sinh THPT toàn quốc có đam mê về lập trình thuật toán nói chung. UCPC hứa hẹn sẽ là cơ hội tuyệt vời để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
                 <a style ="color:#68da23;" target="_blank" href="https://drive.google.com/file/d/19graRApU8lhp5chy9ChfkNEIt4PaKmvF/view?usp=sharing">tại đây</a>.
             </p>
     </div>
@@ -295,45 +295,36 @@
 </div>
 <!-- Lịch trình -->
 
-<!-- Nội quy -->
-<div id="rules">
+<!-- Giới thiệu ban tổ chức -->
+<div id="organizers" class="container-fluid">
     <div class="container">
-        <h1 class="head" style="margin-left: 20px; margin-bottom: 30px;">Nội Quy</h1>
-    </div>
-</div>
-<!-- Nội quy -->
-
-<!-- Giới thiệu nhà tài trợ -->
-<div id="sponsor" class = "container">
-    <!-- <div class="col-6 col-md-4"> -->
-        <h5>ĐƠN VỊ TÀI TRỢ</h5>
-        <div class="unit_logo">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                    <div class="unit">
-                        <img class="diamond_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                    <div class="unit">
-                        <img class="gold_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                    <div class="unit">
-                        <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                    <div class="unit">
-                        <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <h5>ĐƠN VỊ TỔ CHỨC</h5>
+                <div class="unit_logo">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                            <div class="unit">
+                                <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                            <div class="unit">
+                                <img class="HSV" src="{% static 'register/images/footer/Hoi_white.png' %}">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                            <div class="unit">
+                                <img class="CS" src="{% static 'register/images/footer/CS_white.png' %}">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
 </div>
-<!-- Giới thiệu nhà tài trợ -->
+<!-- Giới thiệu ban tổ chức -->
 
 <!-- footer -->
 <footer>
@@ -341,29 +332,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <h5>ĐƠN VỊ HỖ TRỢ</h5>
-                    <div style="text-align: center; align-items: center;">
-                        <img style ="width: 20%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="organizers">
-                        <h5>ĐƠN VỊ TỔ CHỨC</h5>
+                    <div class="sponsor">
+                        <h5>ĐƠN VỊ TÀI TRỢ</h5>
                         <div class="unit_logo">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                     <div class="unit">
-                                        <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
+                                        <img class="gold_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                     <div class="unit">
-                                        <img class="HSV" src="{% static 'register/images/footer/Hoi_white.png' %}">
+                                        <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                     <div class="unit">
-                                        <img class="CS" src="{% static 'register/images/footer/CS_white.png' %}">
+                                        <img class="bronze_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
                             </div>
@@ -371,6 +356,13 @@
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <h5>ĐƠN VỊ HỖ TRỢ</h5>
+                    <div style="text-align: center;">
+                        <img style ="width: 20%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
+                    </div>
+                </div>
+                
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <h5>LIÊN HỆ</h5>
                     <div class="contact">
