--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -298,25 +298,23 @@
 <!-- Giới thiệu ban tổ chức -->
 <div id="organizers" class="container-fluid">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <h5>ĐƠN VỊ TỔ CHỨC</h5>
-                <div class="unit_logo">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                            <div class="unit">
-                                <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
-                            </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <h5>ĐƠN VỊ TỔ CHỨC</h5>
+            <div class="unit_logo">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                        <div class="unit">
+                            <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                            <div class="unit">
-                                <img class="HSV" src="{% static 'register/images/footer/Hoi_white.png' %}">
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                        <div class="unit">
+                            <img class="HSV" src="{% static 'register/images/footer/Hoi_white.png' %}">
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                            <div class="unit">
-                                <img class="CS" src="{% static 'register/images/footer/CS_white.png' %}">
-                            </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                        <div class="unit">
+                            <img class="CS" src="{% static 'register/images/footer/CS_white.png' %}">
                         </div>
                     </div>
                 </div>
@@ -336,7 +334,7 @@
                         <h5>ĐƠN VỊ TÀI TRỢ</h5>
                         <div class="unit_logo">
                             <div class="row">
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                                <div class="col-lg-5 col-md-5 col-sm-5 col-5">
                                     <div class="unit">
                                         <img class="gold_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
@@ -346,7 +344,7 @@
                                         <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
                                     <div class="unit">
                                         <img class="bronze_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
@@ -358,7 +356,7 @@
 
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <h5>ĐƠN VỊ HỖ TRỢ</h5>
-                    <div style="text-align: center;">
+                    <div style="text-align: center; align-items: center;">
                         <img style ="width: 20%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
                     </div>
                 </div>
