--- a/register/templates/register/main.html
+++ b/register/templates/register/main.html
@@ -50,6 +50,8 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/validator/13.7.0/validator.min.js"></script>
 
 	<script src="{% static 'register/javascript/registration.js' %}"></script>
+	<!-- <script src="{% static 'register/javascript/timer.js' %}"></script> -->
+	<!-- <script src="{% static 'register/javascript/renderRegistrationPage.js' %}"></script> -->
 </body>
 
 </html>
