--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -82,7 +82,7 @@
                 <a href="{% url 'register:login' %}" class="btn btn-success" style="width:105px;">Đăng nhập</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:register' %}" class="btn" style = "margin-left: 5px;width:105px; border: none;">Đăng ký</a>
+                <a href="{% url 'register:register' %}" class="btn registration_btn" style = "margin-left: 5px;width:105px; border: none;">Đăng ký</a>
             </div>
             {% endif %}
 
@@ -104,20 +104,20 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
 
-        let deadline = "May 26, 2022 00:00:00"
+        let deadline = "May 29, 2022 00:00:00"
         let countDown = new Date(deadline).getTime()
         let x = setInterval(function () {
             let now = new Date().getTime()
             let distance = countDown - now
             document.querySelector("#days").innerHTML = Math.floor(distance / (1000 * 60 * 60 * 24)),
-                document.querySelector("#hours").innerHTML = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)),
-                document.querySelector("#minutes").innerHTML = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)),
-                document.querySelector("#seconds").innerHTML = Math.floor((distance % (1000 * 60)) / 1000);
+            document.querySelector("#hours").innerHTML = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)),
+            document.querySelector("#minutes").innerHTML = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)),
+            document.querySelector("#seconds").innerHTML = Math.floor((distance % (1000 * 60)) / 1000);
             if (distance < 0) {
                 document.querySelector("#days").innerHTML = 00,
-                    document.querySelector("#hours").innerHTML = 00,
-                    document.querySelector("#minutes").innerHTML = 00,
-                    document.querySelector("#seconds").innerHTML = 00;
+                document.querySelector("#hours").innerHTML = 00,
+                document.querySelector("#minutes").innerHTML = 00,
+                document.querySelector("#seconds").innerHTML = 00;
             }
         }, 0)
     })
@@ -185,8 +185,14 @@
             có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp
             tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
             <a style ="color:#68da23;" target="_blank" href="https://drive.google.com/file/d/18HSf-HGNfVJ7n-1VgzJE8dK432zxVYEm/view?fbclid=IwAR0MPHt7q4ICpRiT139EYRU_Grxo12-XEmBh1YGP9Bvv-M5oeLNy9QL5H3c">tại đây</a>.</p> -->
-            <p>
-                UCPC - UIT COLLEGIATE PROGRAMMING CONTEST là cuộc thi lập trình thuật toán danh giá nhất của UIT, được tổ chức dựa trên format của cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC. Với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường Đại học Công nghệ Thông tin nói riêng và sinh viên các trường đại học, học sinh THPT toàn quốc có đam mê về lập trình thuật toán nói chung. UCPC hứa hẹn sẽ là cơ hội tuyệt vời để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
+            <p style="text-align: justify; margin-bottom: 10px;">
+                Trong tháng 05/2021 này, Liên chi Hội khoa Khoa học Máy tính (LCH KHMT) đã quyết định mang UIT ACM (cuộc thi lập trình thuật toán danh giá nhất của UIT) trở lại với một cái tên cũng như diện mạo hoàn toàn mới đó là UIT COLLEGIATE PROGRAMMING CONTEST (UCPC), cuộc thi sẽ kế thừa hoàn toàn những giá trị truyền thống của 11 mùa UIT ACM trước đây. Bước đổi mới này nhằm khẳng định lại vai trò, vị trí cũng như xác định phương hướng phát triển cho cuộc thi lập trình thuật toán danh giá nhất của UIT.
+            </p>
+            <p style="text-align: justify; margin-bottom: 10px;">
+                UCPC được tổ chức dựa trên format của cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC, với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường Đại học Công nghệ Thông tin (ĐH CNTT) nói riêng và sinh viên các trường đại học, học sinh THPT có đam mê về lập trình thuật toán nói chung. Đây cũng là cơ hội để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao.
+            </p>
+            <p style="text-align: justify;">
+                Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
                 <a style ="color:#68da23;" target="_blank" href="https://drive.google.com/file/d/19graRApU8lhp5chy9ChfkNEIt4PaKmvF/view?usp=sharing">tại đây</a>.
             </p>
     </div>
@@ -248,7 +254,7 @@
         <div class="content">
             <h2 style="font-weight: bold;">17/05 : CÔNG BỐ KẾT QUẢ MINI GAME 1</h2>
             <p>
-                Liên hệ trực tiếp cho ban tổ chức UCPC để có thể sở những phần quà ý nghĩa
+                Liên hệ trực tiếp cho ban tổ chức UCPC để có thể sở hữu những phần quà ý nghĩa
             </p>
         </div>
     </div>
@@ -268,7 +274,7 @@
         <div class="content">
             <h2 style="font-weight: bold;">22/05 : CÔNG BỐ KẾT QUẢ MINI GAME 2</h2>
             <p>
-                Liên hệ trực tiếp cho ban tổ chức UCPC để có thể sở những phần quà ý nghĩa
+                Liên hệ trực tiếp cho ban tổ chức UCPC để có thể sở hữu những phần quà ý nghĩa
             </p>
         </div>
     </div>
