--- a/register/templates/register/navigations.html
+++ b/register/templates/register/navigations.html
@@ -31,7 +31,7 @@
                 <a href="{% url 'register:login' %}" class="btn btn-success" style="width:105px;">Đăng nhập</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:register' %}" class="btn" style = "margin-left: 5px;width:105px; border: none;">Đăng ký</a>
+                <a href="{% url 'register:register' %}" class="btn registration_btn" style = "margin-left: 5px;width:105px; border: none;">Đăng ký</a>
             </div>
             {% endif %}
         </div>
